--- a/my-project/src/Card.css
+++ b/my-project/src/Card.css
@@ -1,9 +1,28 @@
 
-.flip-card {
+body {
+  margin: 0;
+/*   height: 100vh;
+  width: 100vw */;
+ 
+}
+
+.flexContainer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  justify-content: center;
+  padding: 20px;
+  height: 100vh;
+  width: 100vw;
+}
+
+
+
+.flipCard {
   background-color: transparent;
-  width: 300px;
+  width: 200px;
   height: 200px;
-  border: 1px solid #f1f1f1;
+  border: 1px solid red;
   perspective: 1000px;
   
 };
@@ -12,8 +31,9 @@
 /* This container is needed to position the front and back side */
 .flip-card-inner {
   position: relative;
-  width: 100%;
-  height: 100%;
+ 
+ /*  width: 100%; */
+  /* height: 100%; */
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
@@ -27,14 +47,15 @@
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
   position: absolute;
-  width: 100%;
-  height: 100%;
+/*   width: 100%; */
+ /*  height: 100%; */
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
+ 
   background-color: #bbb;
   color: black;
 }
