--- a/my-project/src/Card.css
+++ b/my-project/src/Card.css
@@ -1,8 +1,8 @@
 
 body {
   margin: 0;
-/*   height: 100vh;
-  width: 100vw */;
+  height: 100vh;
+  width: 100vw ;
  
 }
 
@@ -11,23 +11,12 @@ body {
   flex-wrap: wrap;
   flex-grow: 1;
   justify-content: center;
-  padding: 20px;
-  height: 100vh;
-  width: 100vw;
-}
-
-
-
-.flipard {
-  /* background-color: transparent; */
- /*  width: 200px; */
-  /* height: 200px; */
-  border: 1px solid red;
-  
- /*  perspective: 1000px; */
-  
+  margin-top: 10px;
 };
- /* Remove this if you don't want the 3D effect */
+
+
+
+
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
