--- a/my-project/src/Card.css
+++ b/my-project/src/Card.css
@@ -6,6 +6,18 @@ body {
  
 }
 
+.baner {
+  background-color: red;
+  height: 60px;
+}
+
+.header {
+  text-align: center;
+  padding: 15px;
+  height: 20px;
+  width: 100px;
+}
+
 .flexContainer {
   display: flex;
   flex-wrap: wrap;
@@ -21,9 +33,8 @@ body {
 /* This container is needed to position the front and back side */
 .flip-card-inner {
   position: relative;
- 
- /*  width: 100%; */
-  /* height: 100%; */
+  width: 100%;
+  height: 100%;
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
