--- a/my-project/src/Card.css
+++ b/my-project/src/Card.css
@@ -26,7 +26,16 @@ body {
   margin-top: 10px;
 };
 
-
+.flip-card {
+  position: relative;
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px;
+   
+};
+/* Remove this if you don't want the 3D effect */
 
 
 
@@ -48,15 +57,15 @@ body {
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
   position: absolute;
-/*   width: 100%; */
- /*  height: 100%; */
+  width: 100%;
+  height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
- 
+  position: absolute;
   background-color: #bbb;
   color: black;
 }
