--- a/my-project/src/Card.css
+++ b/my-project/src/Card.css
@@ -3,20 +3,19 @@ body {
   margin: 0;
   height: 100vh;
   width: 100vw ;
- 
-}
+};
 
 .baner {
   background-color: red;
   height: 60px;
-}
+};
 
 .header {
   text-align: center;
   padding: 15px;
   height: 20px;
   width: 100px;
-}
+};
 
 .flexContainer {
   display: flex;
@@ -47,12 +46,12 @@ body {
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
-}
+};
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
-}
+};
 
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
@@ -61,18 +60,27 @@ body {
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
-}
+};
 
-/* Style the front side (fallback if image is missing) */
+
 .flip-card-front {
-  position: absolute;
+  position: 'absolute';
+  width: '100%';
+  height: '100%';
+  color: 'black';
   background-color: #bbb;
   color: black;
-}
+};
 
 /* Style the back side */
 .flip-card-back {
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
-}
+};
+
+
+
+
+
+
