--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -1,4 +1,4 @@
-
+/* 
 body {
   margin: 0;
   height: 100vh;
@@ -38,32 +38,32 @@ body {
 
 
 
-/* This container is needed to position the front and back side */
-.flip-card-inner {
+/* /* This container is needed to position the front and back side */
+/* .flip-card-inner {
   position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
-};
+}; */
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
+/* .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
-};
+}; */
 
 /* Position the front and back side */
-.flip-card-front, .flip-card-back {
+/* .flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
  /*  -webkit-backface-visibility: hidden; */ /* Safari */
-  backface-visibility: hidden;
-};
+ /*  backface-visibility: hidden; 
+}; */
 
 
-.flip-card-front {
+/* .flip-card-front {
   position: 'absolute';
   width: '100%';
   height: '100%';
@@ -71,13 +71,13 @@ body {
   background-color: #bbb;
   color: black;
 };
-
-/* Style the back side */
+ */
+/* Style the back side 
 .flip-card-back {
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
 };
-
+ */
 
 
